@@ -10,7 +10,6 @@
  *
  * @param string $compile_path
  * @param string $compiled_content
- * @param integer $resource_timestamp
  * @return true
  */
 function smarty_core_write_compiled_resource($params, &$smarty)
@@ -25,7 +24,7 @@ function smarty_core_write_compiled_resource($params, &$smarty)
         return false;
     }
 
-    $_params = array('filename' => $params['compile_path'], 'timestamp'=>$params['resource_timestamp'], 'contents' => $params['compiled_content'], 'create_dirs' => true);
+    $_params = array('filename' => $params['compile_path'], 'contents' => $params['compiled_content'], 'create_dirs' => true);
     require_once(SMARTY_DIR . 'core' . DIRECTORY_SEPARATOR . 'core.write_file.php');
     smarty_core_write_file($_params, $smarty);
     return true;
